package database;

import java.util.ArrayList;
import java.util.List;

/**
 * Modella una transazione (riga) letta dal database.
 * Ogni Example contiene una lista di valori eterogenei (String, Double, ecc.).
 *
 * @author MAP corso
 * @version 1.0
 */
public class Example implements Comparable<Example> {
    /**
     * Lista di valori che compongono la transazione
     */
    private List<Object> example = new ArrayList<Object>();

    /**
     * Aggiunge un valore alla transazione.
     *
     * @param o oggetto da aggiungere
     */
    public void add(Object o) {
        example.add(o);
    }

    /**
     * Restituisce il valore alla posizione i.
     *
     * @param i indice del valore
     * @return valore alla posizione i
     */
    public Object get(int i) {
        return example.get(i);
    }

    /**
     * Confronta questa transazione con un'altra transazione.
     *
     * @param ex transazione da confrontare
     * @return valore negativo, zero o positivo se questa transazione è
     *         minore, uguale o maggiore di ex
     */
    public int compareTo(Example ex) {
        int sizeDiff = this.example.size() - ex.example.size();
        if (sizeDiff != 0) {
            return sizeDiff;
        }
        for (int i = 0; i < this.example.size(); i++) {
            Object o1 = this.example.get(i);
            Object o2 = ex.example.get(i);
            if (!o1.equals(o2)) {
                return ((Comparable) o1).compareTo(o2);
            }
        }
        return 0;
    }

    /**
     * Restituisce una rappresentazione testuale della transazione.
     *
     * @return stringa con tutti i valori separati da spazio
     */
    public String toString() {
        String str = "";
        for (Object o : example)
            str += o.toString() + " ";
        return str;
    }
}
