package database;

/**
 * Enumerazione per i tipi di query aggregative (MIN, MAX).
 *
 * @author MAP corso
 * @version 1.0
 */
public enum QUERY_TYPE {
    /**
     * Query di tipo MIN per valore minimo
     */
    MIN,

    /**
     * Query di tipo MAX per valore massimo
     */
    MAX
}
